--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="http://https://github.com/shbmpd/HTML-CSS-JS-Assignment/blob/master/css/style.csscss" rel="stylesheet"/>
+	<link href="http://https://github.com/shbmpd/HTML-CSS-JS-Assignment/blob/master/css/style.css" rel="stylesheet"/>
 	<title>Module 2 Solution</title>
 </head>
 <body>
