--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link type="text/css" rel="stylesheet" href="css/style.css">
+	<link type="text/css" rel="stylesheet" href="HTML-CSS-JS-Assignment/tree/master/css">
 	<title>Module 2 Solution</title>
 </head>
 <body>
