--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link type="text/css" rel="stylesheet" href="https://github.com/shbmpd/HTML-CSS-JS-Assignment/tree/master/css/style.css">
+	<link rel="stylesheet" type="text/css" href="https://github.com/shbmpd/shbmpd.github.io/blob/master/style.css">
 	<title>Module 2 Solution</title>
 </head>
 <body>
