--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" type="text/css" href="https://github.com/shbmpd/shbmpd.github.io/blob/master/style.css">
+	<link rel="stylesheet" type="text/css" href="https://shbmpd.github.io/style.css">
 	<title>Module 2 Solution</title>
 </head>
 <body>
