--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" type="text/css" href="https://shbmpd.github.io/css/style.css">
+	<link type="text/css" rel="stylesheet" href="style.css" />
 	<title>Module 2 Solution</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
 			Chicken
 		</div>
 		<p>
-			Among the many reasons that make Indian food a popular cuisine across the globe, one is the use of aromatic spices that make the meal an absolute treat. Yes, it could also be hot and spicy for some, but if you can get past that then you will find it hard to resist the various kinds of curries and stir-fries that grace the Indian table. Indian cooking offers a beautiful melange of herbs and spices, and if your favourite meat is chicken, then there are many lip-smacking options for you to go all out and indulge from a host of chicken dishes.
+			CHANGE 1 Among the many reasons that make Indian food a popular cuisine across the globe, one is the use of aromatic spices that make the meal an absolute treat. Yes, it could also be hot and spicy for some, but if you can get past that then you will find it hard to resist the various kinds of curries and stir-fries that grace the Indian table. Indian cooking offers a beautiful melange of herbs and spices, and if your favourite meat is chicken, then there are many lip-smacking options for you to go all out and indulge from a host of chicken dishes.
 		</p>
 		</section>
 	</div>
